--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -3,10 +3,11 @@ ul {
 }
 
 .profile {
-  background-color: gray;
+  background-color: rgb(144, 170, 136);
   width: 250px;
   height: 350px;
   border-radius: 15px;
+  border: 2px solid rgb(83, 13, 13);
   margin: 50px;
   padding: 20px;
 }
@@ -16,8 +17,8 @@ ul {
 
 .avatar {
   border-radius: 50%;
-  border: 1px solid black;
-  background-color: #fff;
+  border: 2px solid rgb(83, 13, 13);
+  background-color: rgb(216, 211, 211);
 }
 
 .name {
