--- a/src/components/TransactionHistory/transaction.module.css
+++ b/src/components/TransactionHistory/transaction.module.css
@@ -1,5 +1,6 @@
 .transactionHistory {
-  border: 2px solid black;
+  border: 2px solid rgb(66, 18, 18);
+  border-radius: 5px;
   text-align: center;
 }
 
@@ -7,7 +8,7 @@ th {
   width: 200px;
   height: 40px;
   font-size: 20px;
-  background-color: green;
+  background-color: rgb(71, 26, 49);
 }
 
 td {
